src/test/ui/nll/loan_ends_mid_block_pair.polonius.stderr
error[E0506]: cannot assign to `data.0` because it is borrowed
  --> $DIR/loan_ends_mid_block_pair.rs:12:5
   |
LL |     let c = &mut data.0;
   |             ----------- borrow of `data.0` occurs here
LL |     capitalize(c);
LL |     data.0 = 'e';
   |     ^^^^^^^^^^^^ assignment to borrowed `data.0` occurs here
...
LL |     capitalize(c);
   |                - borrow later used here

error[E0506]: cannot assign to `data.0` because it is borrowed
  --> $DIR/loan_ends_mid_block_pair.rs:14:5
   |
LL |     let c = &mut data.0;
   |             ----------- borrow of `data.0` occurs here
...
LL |     data.0 = 'f';
   |     ^^^^^^^^^^^^ assignment to borrowed `data.0` occurs here
LL |     data.0 = 'g';
LL |     capitalize(c);
   |                - borrow later used here

error[E0506]: cannot assign to `data.0` because it is borrowed
  --> $DIR/loan_ends_mid_block_pair.rs:15:5
   |
LL |     let c = &mut data.0;
   |             ----------- borrow of `data.0` occurs here
...
LL |     data.0 = 'g';
   |     ^^^^^^^^^^^^ assignment to borrowed `data.0` occurs here
LL |     capitalize(c);
   |                - borrow later used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0506`.
